RESOLVED FIXED294857
REGRESSION (296172@main): Crash when searching for products on lowes.com
https://bugs.webkit.org/show_bug.cgi?id=294857
Summary REGRESSION (296172@main): Crash when searching for products on lowes.com
Aditya Keerthi
Reported 2025-06-23 12:05:34 PDT
Attachments
Aditya Keerthi
Comment 1 2025-06-23 12:40:32 PDT
EWS
Comment 2 2025-06-23 16:00:32 PDT
Committed 296537@main (95ed1aab1df3): <https://commits.webkit.org/296537@main> Reviewed commits have been landed. Closing PR #47077 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.