REGRESSION (296172@main): Crash when searching for products on lowes.com https://bugs.webkit.org/show_bug.cgi?id=294857 rdar://153989680

Reviewed by Abrar Rahman Protyasha.

296172@main introduced an unconditional optional dereference in
`NumberInputType::decorationWidth`, when obtaining the width of the spin button.

The logic in that method has never worked correctly for non-fixed values. It
only runs when autosizing number inputs based on their min/max values. For now,
restore the original behavior by safely dereferencing the optional.

https://webkit.org/b/294858 has been filed to track a longer term solution.

* LayoutTests/fast/forms/number/number-min-max-spinbutton-appearance-none-crash-expected.txt: Added.
* LayoutTests/fast/forms/number/number-min-max-spinbutton-appearance-none-crash.html: Added.
* Source/WebCore/html/NumberInputType.cpp:
(WebCore::NumberInputType::decorationWidth const):

Percentage values are also checked to restore the old behavior.

Canonical link: https://commits.webkit.org/296537@main