Source/WebCore/html/NumberInputType.cpp
@@ -208,8 +208,11 @@ float NumberInputType::decorationWidth() const
         // Since the width of spinRenderer is not calculated yet, spinRenderer->logicalWidth() returns 0.
         // So computedStyle()->logicalWidth() is used instead.
 
-        // FIXME: Document what invariant holds to allow not checking if the logicalWidth() is fixed.
-        width += spinButton->computedStyle()->logicalWidth().tryFixed()->value;
+        // FIXME <https://webkit.org/b/294858>: This is incorrect for anything other than fixed widths.
+        if (auto fixedLogicalWidth = spinButton->computedStyle()->logicalWidth().tryFixed())
+            width += fixedLogicalWidth->value;
+        else if (auto percentageLogicalWidth = spinButton->computedStyle()->logicalWidth().tryPercentage())
+            width += percentageLogicalWidth->value;
     }
     return width;
 }
